--- a/frontend/src/components/Reviews/Reviews.css
+++ b/frontend/src/components/Reviews/Reviews.css
@@ -18,7 +18,8 @@
     padding-top: 10px;
     padding-bottom: 10px;;
     max-height: 500px;
-    overflow-y: scroll;
+    overflow-y: auto;
+
 }
 
 
@@ -75,7 +76,7 @@
     /* width: 100%; */
 
     height: 100px;
-    overflow: scroll;
+    overflow-y: auto;
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
     font-size: 15px;
     border-radius: 8px;
@@ -139,7 +140,7 @@
     width: 430px;
     height: 100px;
     resize: none;
-    overflow: scroll;
+    overflow-y: auto;
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
     font-size: 15px;
     border-radius: 8px;
